force-app/main/default/objects/Report_Template_Indicator__c/Report_Template_Indicator__c.object-meta.xml
<CustomObject>
    <label>Report Template Indicator</label>
    <nameField>
        <displayFormat>RTI-{00000}</displayFormat>
        <label>Report Template Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Template Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>