force-app/main/default/objects/Report_Template_Indicator__c/fields/Indicator_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Catalogue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Indicator Catalogue</label>
    <referenceTo>Indicator_Catalogue__c</referenceTo>
    <relationshipLabel>Report Template Indicators</relationshipLabel>
    <relationshipName>Report_Template_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>