force-app/main/default/objects/Report_Template_Indicator__c/fields/Metric_Level__c.field-meta.xml
<CustomField>
    <fullName>Metric_Level__c</fullName>
    <formula>text(Indicator_Catalogue__r.Metric_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metric Level</label>
    <type>Text</type>
</CustomField>