force-app/main/default/objects/Report_Template_Indicator__c/fields/Report_Template__c.field-meta.xml
<CustomField>
    <fullName>Report_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Report Template</label>
    <referenceTo>Report_Template__c</referenceTo>
    <relationshipLabel>Report Template Indicators</relationshipLabel>
    <relationshipName>Report_Template_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>