force-app/main/default/objects/Report_Template_Indicator__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <formula>text(Indicator_Catalogue__r.Section__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section</label>
    <type>Text</type>
</CustomField>