force-app/main/default/objects/Report_Template_Indicator__c/fields/Standard_Custom__c.field-meta.xml
<CustomField>
    <fullName>Standard_Custom__c</fullName>
    <formula>text(Indicator_Catalogue__r.Standard_Custom__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard-Custom</label>
    <type>Text</type>
</CustomField>