force-app/main/default/objects/Report_Template_Indicator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Indicator_Catalogue__c</columns>
    <columns>Indicator_Name__c</columns>
    <columns>Report_Template__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>